[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["cicerotcv <elm.tiago@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sentiment_analisys"}]

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.0.2"
jupyter = "^1.0.0"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
